# crabterm

./: Cargo.toml  LICENSE  README.md  build.rs  crabterm.1  crabterm.sample  install-local.sh
docs/: requirements.md
src/: announce.rs  hub.rs  main.rs  monitor.rs  term.rs  traits.rs
src/io/: console.rs  echo_device.rs  filter.rs  mod.rs  serial_device.rs  tcp_device.rs  tcp_server.rs
src/iofilter/: charmap.rs  mod.rs  timestamp.rs
src/keybind/: action.rs  config.rs  key.rs  mod.rs  parser.rs  processor.rs
tests/: announce.rs  console.rs  monitor.rs  tcp.rs  tcp_reconnect.rs
tests/common/: mod.rs
