[package]
name = "crabterm"
version = "0.1.0"
edition = "2024"
description = "A terminal (UART) server and client"
repository = "https://github.com/allannielsen/crabterm"
license = "MIT"
keywords = ["serial", "uart", "terminal", "tcp"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.48", features = ["wrap_help"]}
mio = { version = "1.0", features = ["os-ext", "net"] }
log = "0.4"
flexi_logger = "0.31"
termios = "0.3.3"
mio-serial = "5.0.6"
dirs = "6.0"
chrono = "0.4"
signal-hook = "0.3"
signal-hook-mio = { version = "0.2", features = ["support-v1_0"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "net", "time", "macros", "io-util"] }
serial_test = "3"
